# parser-json-struct-rust

./: Cargo.toml  README.md
src/: main.rs  parser.rs
