[package]
name = "parser-json-struct"
version = "0.1.0"
authors = ["izul <izuleon001>"]
edition = "2018"
homepage = ""
description = "Create a method to convert general struct into json and vice-versa"
documentation = ""
repository = "https://github.com/izuleon/parser-json-struct-rust.git"
readme = "README.md"
keywords = ["parser", "json", "struct"]
categories = ["parser"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0.117", features = ["derive"]}
serde_json = "1.0.59"
